guestbook-java/frontend/kubernetes-manifests/guestbook-frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-guestbook-frontend
  labels:
    app: java-guestbook
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-guestbook
      tier: frontend
  template:
    metadata:
      labels:
        app: java-guestbook
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: asia-east1-docker.pkg.dev/shawnho-demo-2023/shawnho-demo-2023/java-guestbook-frontend
        ports:
        - name: http-server
          containerPort: 8080
        - name: metrics
          containerPort: 1234
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
