guestbook-java/frontend/kubernetes-manifests/guestbook-frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-guestbook-frontend
  labels:
    app: java-guestbook
    tier: frontend
spec:
  type: LoadBalancer
  selector:
    app: java-guestbook
    tier: frontend
  ports:
  - name: http
    port: 80
    targetPort: http-server
  - name: metrics
    port: 1234
    targetPort: metrics
