guestbook-java/frontend/kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: my-frontend-config
  name: frontend
  namespace: default
spec:
  rules:
  - host: frontend.shawnk8s.com
    http:
      paths:
      - backend:
          service:
            name: java-guestbook-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - frontend.shawnk8s.com
    secretName: tls-secret
